These are Jen's Edits

--- a/README
+++ b/README
@@ -1,2 +1,3 @@
 Its time for introductions ...
 The world says hello back! (from Andreas)
+I'm actually impressed I can figure out how to make this work! (from Jen)
